fixes to author card always truncating on small mob cards

--- a/static/css/partials/_card-sm.scss
+++ b/static/css/partials/_card-sm.scss
@@ -25,6 +25,7 @@
                 }
                 .author {
                     height: 16px;
+                    width: 100%;
                     img {
                     }
                     p {
